<resources>
    <string name="app_name">Resturant</string>
    <string name="welcome_to">Welcome to</string>
    <string name="imac">iMaC</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Sign Up</string>
    <string name="enter_ur_email"> Enter ur Email</string>
    <string name="enter_name">Enter ur Name</string>
    <string name="contact_phone">Contact Phone</string>
    <string name="add_contact">Add Contact</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone">phone</string>
    <string name="successfully">Successfully!</string>
    <string name="food">Food</string>
    <string name="drinks">Drinks</string>
    <string name="snakes">Snakes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="failed">failed to sign in Check your data</string>
    <string name="taken">This email Already taken ...</string>
    <string name="welcome_to_imac">Welcome to imac</string>
</resources>