<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUp"
    android:background="@drawable/background1">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/g1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/sign_up"
            android:textSize="@dimen/_50sdp"
            android:layout_margin="@dimen/_15sdp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintTop_toBottomOf="@id/g1"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/enter_name"
            android:textSize="@dimen/_15sdp"
            android:padding="@dimen/_10sdp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="@dimen/_15sdp"
            />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintTop_toBottomOf="@id/name"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/phone"
            android:textSize="@dimen/_15sdp"
            android:padding="@dimen/_8sdp"
            android:inputType="phone"
            android:drawablePadding="@dimen/_15sdp"
            android:drawableStart="@drawable/ic_baseline_local_phone_24"
            />

        <EditText
            android:id="@+id/email1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintTop_toBottomOf="@id/phone"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/enter_ur_email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/_15sdp"
            android:padding="@dimen/_10sdp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="@dimen/_15sdp"
            />
        <EditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintTop_toBottomOf="@id/email1"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/_15sdp"
            android:padding="@dimen/_10sdp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="@dimen/_15sdp"
            />
        <Button
            android:id="@+id/signUp_btn"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password1"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="@dimen/_21sdp"
            android:background="@drawable/red_circle"
            android:padding="@dimen/_10sdp"
            />
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/prog1"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:visibility="gone"
        android:layout_gravity="center"
        android:theme="@style/AppTheme.WhiteAccent"
        />

</FrameLayout>